[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Station/Assets/main_background.png" type="Texture" id=1]
[ext_resource path="res://UI/Station/LeftTabContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Station/StationMain.gd" type="Script" id=3]
[ext_resource path="res://UI/Station/Assets/stationimage.png" type="Texture" id=4]
[ext_resource path="res://UI/Station/Fonts/ethnocentric rg.otf" type="DynamicFontData" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float circle_size : hint_range(0,1) = 0.5f;

void fragment(){
	if (distance(vec2(0.5,0.5), UV) < circle_size){
		COLOR.a = 0.0f;
	}
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 1 )
shader_param/circle_size = 1.0

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 5 )

[node name="StationMain" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.105882, 0.105882, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -962.0
margin_top = -540.0
margin_right = 962.0
margin_bottom = 540.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1924.0
margin_bottom = 1080.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/HBoxContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
texture = ExtResource( 1 )
draw_center = false

[node name="LabelTitle" type="Label" parent="MarginContainer/HBoxContainer/NinePatchRect"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 24.0
margin_right = 2.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "TITLE"
align = 1
valign = 1

[node name="LeftTabContainer" parent="MarginContainer/HBoxContainer/NinePatchRect" instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1924.0
margin_right = 1924.0
margin_bottom = 1080.0

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]

[node name="StationImage" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/NinePatchRect2"]
margin_left = -780.0
margin_top = 192.0
margin_right = -83.0
margin_bottom = 818.0
texture = ExtResource( 4 )

[node name="ButtonQuit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/NinePatchRect2"]
margin_left = -224.0
margin_top = 927.0
margin_right = -76.0
margin_bottom = 973.0
custom_colors/font_color_focus = Color( 0.105882, 0.713726, 0.0705882, 1 )
custom_colors/font_color = Color( 0.105258, 0.714844, 0.0726013, 1 )
custom_colors/font_color_hover = Color( 0.658824, 0.839216, 0.0980392, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "QUIT"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/NinePatchRect2/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
